oxcaml/tests/backend/zero_alloc_checker/fail18.structured.output
File "fail18.ml", line 1, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail18.f (_CamlU6Fail18F3f_HIDE_STAMP).
