oxcaml/tests/backend/zero_alloc_checker/fail18.ml
let[@zero_alloc] f x ?(y = x, x) () = y
